welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:33: error: not found: value getY
		case getY() if (getY() < getMondeHauteur - 1) => diag1()
                     ^